--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -3,7 +3,8 @@ $texto_secundario: 'Raleway', sans-serif;
 $fondo: #023e8a;
 $doce: 12px;
 $quince: 15px;
-$dez:10px;
+$diez:10px;
+$veinte:20px;
 
 
 .tabla {
