--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -674,7 +674,7 @@ footer {
                         margin-bottom: 15px;
 
                         img {
-                            width: 100%
+                            width: 400px;
                         }
                     }
 
@@ -763,8 +763,6 @@ footer {
 @media screen and (max-width: 480px) {
     main {
         .galeria-responsive {
-            display: block;
-
             img {
                 width: 100%;
                 height: 250px;
@@ -826,9 +824,10 @@ footer {
         }
 
         .section__categoria {
-            h3{
+            h3 {
                 font-size: 25px;
             }
+
             .contenedor__categoria {
                 grid-template-columns: repeat(1, 70vw);
                 justify-content: center;
@@ -882,6 +881,8 @@ footer {
 
         .footer__info {
             .info-contacto {
+                flex-direction: column;
+
                 .map {
                     iframe {
                         width: 200px;
@@ -892,4 +893,76 @@ footer {
             }
         }
     }
+}
+
+@media screen and (max-width: 320px) {
+    main {
+        .galeria-responsive {
+            .mi_estilo_galeria {
+                img {
+                    height: 170px;
+                }
+            }
+
+        }
+        .section__noticias {
+
+            .section__div__noticias {
+
+                .noticia {
+
+                    .img_responsive {
+                        display: block;
+                        width: 280px;
+                        margin-top: 20px;
+                        margin-bottom: 15px;
+
+                        img {
+                            width: 100%;
+                        }
+                    }
+                }
+
+
+            }
+        }
+        .proximos_encuentro img {
+            width: 100%;
+            height: 200px;
+        }
+        .section__categoria {
+            h3 {
+                font-size: 15px;
+            }
+
+            .contenedor__categoria {
+                .categoria__img {
+                    h4 {
+                        font-size: 12px;
+                    }
+
+                }
+
+            }
+            
+        }
+        .formulario {
+            height: 150px;
+
+            .formulario__form{
+                flex-direction: column;
+                .formulario__form__email{
+                    font-size: $doce;
+                    width: 170px;
+                    margin-bottom: 20px;
+                }
+            }
+
+        }
+
+    }
+
+
+
+
 }
