probando lo ultimo

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -906,7 +906,9 @@ footer {
 
         }
         .section__noticias {
-
+            h1{
+                display: none;
+            }
             .section__div__noticias {
 
                 .noticia {
