--- a/style/style.css
+++ b/style/style.css
@@ -1026,6 +1026,7 @@ main .nosotros {
     margin: 0 auto;
     text-align: justify; }
   main .nosotros .scaloneta {
+    width: 100%;
     text-align: center; }
 
 @media screen and (max-width: 320px) {
