--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -15,6 +15,7 @@ main{
             text-align: justify;
         }
         .scaloneta{
+            width: 100% ;
             text-align: center;
         }
     }
