--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,22 @@
       justify-content: center;
       padding: 20px;
       background-color: whitesmoke;
-      animation-name: menu; } }
+      animation-name: menu;
+      animation-iteration-count: initial;
+      animation-duration: 0.5s; }
+  @keyframes menu {
+    0% {
+      width: 50%;
+      margin-left: 100%; }
+    50% {
+      width: 70%;
+      margin-left: 30%; }
+    75% {
+      width: 80%;
+      margin-left: 20%; }
+    100% {
+      width: 100%;
+      margin-left: 0; } } }
 
 @media screen and (max-width: 600px) {
   .header .header__logo img {
